--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,5 @@ repositories {
 
 dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
 }
