--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 
 dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.8.0'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
 }
