--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@ group 'com.pw.eiti.wedt'
 version '1.0'
 
 apply plugin: 'java'
+apply plugin: 'groovy'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
