--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,11 @@
-group 'com.pw.eiti.wedt'
-version '1.0'
 
-apply plugin: 'java'
-apply plugin: 'groovy'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenCentral()
+allprojects {
+    repositories {
+        mavenCentral()
+    }
 }
 
-dependencies {
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.8.0'
-    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+subprojects {
+    group 'com.pw.eiti.wedt'
+    version '1.0'
 }
