--- a/trainer/build.gradle
+++ b/trainer/build.gradle
@@ -7,6 +7,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile project(':common')
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
+    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.25'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
 }
 
 mainClassName = 'com.pw.eiti.wedt.NetworkTrainer'
