--- a/common/build.gradle
+++ b/common/build.gradle
@@ -8,5 +8,6 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.8.0'
     compile group: 'org.encog', name: 'encog-core', version: '3.4'
+    compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.25'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
 }
