--- a/trainer/build.gradle
+++ b/trainer/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile project(':common')
     compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
     compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.25'
+    compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
 }
 
