--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,5 +9,6 @@ dependencies {
     compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.8.0'
     compile group: 'org.encog', name: 'encog-core', version: '3.4'
     compile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.25'
+    compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
     testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
 }
