--- a/trainer/build.gradle
+++ b/trainer/build.gradle
@@ -1,9 +1,14 @@
 apply plugin: 'application'
-apply plugin: 'java'
-apply plugin: 'groovy'
+apply plugin: 'com.github.johnrengelman.plugin-shadow'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.2'
+    }
+}
 
 dependencies {
     compile project(':common')
@@ -14,3 +19,17 @@ dependencies {
 }
 
 mainClassName = 'com.pw.eiti.wedt.NetworkTrainer'
+
+jar {
+    baseName = 'NetworkTrainer.jar'
+    // Keep jar clean:
+    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF'
+
+    manifest {
+        attributes ('Main-Class': mainClassName)
+    }
+}
+
+shadowJar {
+    archiveName = 'NetworkTrainer.jar'
+}
